# FedProC

./: .gitignore  .readthedocs.yaml  EDA.py  LICENSE  README.md  analysis.py  code_formatting.sh  hyper_tuning.py  hyper_tuning.sh  main.py  pyproject.toml  requirements.txt  scripts.xlsx  server_best.pt  test.py
.env/: environment.yml  requirements.txt
.github/: dependabot.yml
analysis/: __init__.py  __main__.py  cli.py  communication.py  convergence.py  datasets.py  efficiency.py  inference.py  io.py  landscape.py  metrics.py  multi.py  results.py  results_at.py  single.py  stability.py  utils.py
attacks/: BackdoorHF.py  GaussianNoise.py  NoAttack.py  ScaleBoost.py  SignFlip.py  StealthHF.py  __init__.py  base.py
augs/: __init__.py  cutout.py  jitter.py  scaling.py  subsequence.py  time_warp.py  window_slice.py  window_warp.py
data_factory/: BaseStation5G.py  BeijingAirQuality.py  COVID19Cases.py  CitiesILI.py  CryptoDataDownload.py  Custom1.py  Custom2.py  Customized.py  ETDataset.py  Electricity.py  ElectricityLoadDiagrams.py  ExchangeRate.py  M4.py  METRLA.py  MekongSalinity.py  PEMS03.py  PEMS04.py  PEMS07.py  PEMS08.py  PeMS03.py  PeMS04.py  PeMS08.py  PeMSBAY.py  PeMSSF.py  SolarCSGREGFC.py  SolarEnergy.py  StatesILI.py  SyntheticGrok.py  TetouanPowerConsumption.py  ThreeW.py  Traffic.py  Weather5K.py  WindCSGREGFC.py  __init__.py  base.py  data_frame_optimizer.py  file_manager.py  time_series_characteristics.py
docs/: analysis.md  attacks.md  augs.md  code_formatting.md  customization.md  datasets.md  execution-model.md  formatting.md  index.md  (+11 more)
(+303 files in other folders)
